feat(api): proposal routes
